--- a/UI/src/desktop/sheet/sheet.fxml
+++ b/UI/src/desktop/sheet/sheet.fxml
@@ -7,7 +7,7 @@
 <ScrollPane fx:id="gridScrollPane" fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktop.sheet.SheetController">
    <content>
       <VBox>
-         <TableView fx:id="spreadsheetTableView" editable="true" VBox.vgrow="ALWAYS" />
+         <TableView fx:id="spreadsheetTableView" editable="true" VBox.vgrow="ALWAYS" styleClass="spreadsheet-table" />
       </VBox>
    </content>
 </ScrollPane>
