add simple SheetDisplay.fxml

--- a/client-ui/src/sheetDisplay/SheetDisplay.fxml
+++ b/client-ui/src/sheetDisplay/SheetDisplay.fxml
@@ -15,114 +15,78 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetDisplay.SheetDisplayController">
+<ScrollPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetDisplay.SheetDisplayController" stylesheets="@sheetDisplay.css">
     <BorderPane fx:id="mainPane" styleClass="root">
         <top>
             <!-- Main container for the top section -->
             <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-                <children>
-                    <!-- First HBox for title, theme selector, and animation toggle -->
-                    <HBox alignment="CENTER" spacing="20">
-                        <children>
-                            <!-- Left: Animation toggle -->
-                            <HBox alignment="CENTER_LEFT" spacing="10">
-                                <children>
-                                    <Label text="Animations:" />
-                                    <ChoiceBox fx:id="animationToggle" prefWidth="100" onAction="#handleAnimationToggle">
-                                        <items>
-                                            <FXCollections fx:factory="observableArrayList">
-                                                <String fx:value="On" />
-                                                <String fx:value="Off" />
-                                            </FXCollections>
-                                        </items>
-                                    </ChoiceBox>
-                                </children>
-                            </HBox>
+                <!-- First HBox for title, theme selector, and animation toggle -->
+                <HBox alignment="CENTER" spacing="20"><!-- Center: Application title -->
+                <Label fx:id="applicationTitle" styleClass="title-label" text="ShtiCell">
+                    <font>
+                        <Font name="System Bold" size="18.0"/>
+                    </font>
+                </Label>
+                </HBox>
 
-                            <!-- Center: Application title -->
-                            <Label fx:id="applicationTitle" styleClass="title-label" text="ShtiCell">
-                                <font>
-                                    <Font name="System Bold" size="18.0" />
-                                </font>
-                            </Label>
+                <!-- Existing file load section -->
+                <HBox alignment="CENTER_LEFT" spacing="10.0">
+                    <Label fx:id="usernameLabel" styleClass="header-label" text="Welcome, [Username]" />
+                    <TextField fx:id="sheetNameField" editable="false" prefWidth="150.0"
+                               styleClass="file-name" HBox.hgrow="ALWAYS"/>
+                </HBox>
 
-                            <!-- Right: Theme selector -->
-                            <HBox alignment="CENTER_RIGHT" spacing="10">
-                                <children>
-                                    <Label text="Theme:" />
-                                    <ChoiceBox fx:id="themeSelector" prefWidth="150" onAction="#handleThemeChange">
-                                        <items>
-                                            <FXCollections fx:factory="observableArrayList">
-                                                <String fx:value="Light" />
-                                                <String fx:value="Dark" />
-                                                <String fx:value="Twilight" />
-                                            </FXCollections>
-                                        </items>
-                                    </ChoiceBox>
-                                </children>
-                            </HBox>
-                        </children>
-                    </HBox>
+                <!-- Action line for cell updates and value handling -->
+                <HBox alignment="TOP_CENTER" spacing="10.0" styleClass="action-line">
+                    <children>
+                        <TextField fx:id="selectedCellId" editable="false" promptText="Selected Cell ID"/>
+                        <TextField fx:id="originalCellValue" promptText="Original Cell value"/>
+                        <Button fx:id="updateValueButton" mnemonicParsing="false" onAction="#handleUpdateValue"
+                                styleClass="update-button" text="Update value">
+                            <tooltip>
+                                <Tooltip text="Update the selected cell value"/>
+                            </tooltip>
+                        </Button>
+                        <TextField fx:id="lastUpdateCellVersion" editable="false"
+                                   promptText="Last update cell version"/>
+                        <ChoiceBox fx:id="versionSelector" accessibleHelp="version selection"
+                                   accessibleText="version selection" prefWidth="150.0"
+                                   styleClass="version-selector"/>
+                    </children>
+                </HBox>
 
-
-                    <!-- Existing file load section -->
-                    <HBox alignment="CENTER_LEFT" spacing="10.0">
-                        <children>
-                            <Button fx:id="loadFileButton" mnemonicParsing="false" onAction="#handleLoadFile" styleClass="load-button" text="Load File">
-                                <tooltip>
-                                    <Tooltip text="Load a new spreadsheet file" />
-                                </tooltip>
-                            </Button>
-                            <TextField fx:id="filePathField" editable="false" prefWidth="200.0" styleClass="file-path" HBox.hgrow="ALWAYS" />
-                        </children>
-                    </HBox>
-
-                    <!-- Action line for cell updates and value handling -->
-                    <HBox alignment="TOP_CENTER" spacing="10.0" styleClass="action-line">
-                        <children>
-                            <TextField fx:id="selectedCellId" editable="false" promptText="Selected Cell ID" />
-                            <TextField fx:id="originalCellValue" promptText="Original Cell value" />
-                            <Button fx:id="updateValueButton" mnemonicParsing="false" onAction="#handleUpdateValue" styleClass="update-button" text="Update value">
-                                <tooltip>
-                                    <Tooltip text="Update the selected cell value" />
-                                </tooltip>
-                            </Button>
-                            <TextField fx:id="lastUpdateCellVersion" editable="false" promptText="Last update cell version" />
-                            <ChoiceBox fx:id="versionSelector" accessibleHelp="version selection" accessibleText="version selection" prefWidth="150.0" styleClass="version-selector" />
-                        </children>
-                    </HBox>
-
-                    <!-- Color picker and styling options -->
-                    <HBox spacing="10" styleClass="color-picker">
-                        <children>
-                            <ColorPicker fx:id="backgroundColorPicker">
-                                <tooltip>
-                                    <Tooltip text="Select background color" />
-                                </tooltip>
-                            </ColorPicker>
-                            <ColorPicker fx:id="textColorPicker">
-                                <tooltip>
-                                    <Tooltip text="Select text color" />
-                                </tooltip>
-                            </ColorPicker>
-                            <Button fx:id="applyStyleButton" onAction="#handleApplyStyle" styleClass="color-picker" text="Apply Style">
-                                <tooltip>
-                                    <Tooltip text="Apply selected style to the cell" />
-                                </tooltip>
-                            </Button>
-                            <Button fx:id="resetStyleButton" onAction="#handleResetStyle" styleClass="color-picker" text="Reset Style">
-                                <tooltip>
-                                    <Tooltip text="Reset cell style to default" />
-                                </tooltip>
-                            </Button>
-                        </children>
-                    </HBox>
-                </children>
+                <!-- Color picker and styling options -->
+                <HBox spacing="10" styleClass="color-picker">
+                    <children>
+                        <ColorPicker fx:id="backgroundColorPicker">
+                            <tooltip>
+                                <Tooltip text="Select background color"/>
+                            </tooltip>
+                        </ColorPicker>
+                        <ColorPicker fx:id="textColorPicker">
+                            <tooltip>
+                                <Tooltip text="Select text color"/>
+                            </tooltip>
+                        </ColorPicker>
+                        <Button fx:id="applyStyleButton" onAction="#handleApplyStyle" styleClass="color-picker"
+                                text="Apply Style">
+                            <tooltip>
+                                <Tooltip text="Apply selected style to the cell"/>
+                            </tooltip>
+                        </Button>
+                        <Button fx:id="resetStyleButton" onAction="#handleResetStyle" styleClass="color-picker"
+                                text="Reset Style">
+                            <tooltip>
+                                <Tooltip text="Reset cell style to default"/>
+                            </tooltip>
+                        </Button>
+                    </children>
+                </HBox>
             </VBox>
         </top>
 
         <center>
-            <fx:include fx:id="spreadsheetGrid" source="../sheet/sheet.fxml" />
+            <fx:include fx:id="spreadsheetGrid" source="./sheet/sheet.fxml" />
         </center>
 
         <left>
