--- a/client-ui/src/sheetDisplay/sheet/sheet.fxml
+++ b/client-ui/src/sheetDisplay/sheet/sheet.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
-<ScrollPane fx:id="gridScrollPane" fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="desktop.sheet.SheetController">
+<ScrollPane fx:id="gridScrollPane" fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sheetDisplay.sheet.SheetController">
    <content>
       <VBox>
          <TableView fx:id="spreadsheetTableView" editable="true" VBox.vgrow="ALWAYS" styleClass="spreadsheet-table" />
